DAT-144 Reafactoring